config jvm for jetty.sh